@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<databaseChangeLog
+	xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+		http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+	
+	<changeSet id="add-failed-import-requests" author="php-coder" context="test-data">
+		
+		<insert tableName="series_import_requests">
+			<column name="url" value="http://127.0.0.1:8080/series/1?lang=en" />
+			<column name="status_id" valueComputed="(SELECT id FROM series_import_request_statuses WHERE name = 'DownloadingFailed')" />
+			<column name="requested_at" valueComputed="${NOW}" />
+			<column name="requested_by" valueComputed="(SELECT id FROM users WHERE role = 'ADMIN' ORDER by id LIMIT 1)" />
+			<column name="updated_at" valueComputed="${NOW}" />
+		</insert>
+		
+	</changeSet>
+	
+</databaseChangeLog>
