@@ -211,6 +211,7 @@ t_submit_request = Submit request
 t_import_request = import request
 t_status = Status
 t_imported_series = Imported series
+t_retry = Retry
 t_gathered_data = Gathered data
 t_import = Import
 t_seller_url = Seller URL
