@@ -210,6 +210,7 @@ t_submit_request = Создать запрос
 t_import_request = запрос на импорт
 t_status = Статус
 t_imported_series = Импортированная серия
+t_retry = Повторить
 t_gathered_data = Собранные данные
 t_import = Импортировать
 t_seller_url = Страница продавца
